# monte-carlo-simulation

./: README.md  pyproject.toml
notebooks/: margin-gale.ipynb  monte-carlo-simulation.ipynb
