[tool.poetry]
name = "monte-carlo-simulation"
version = "0.1.0"
description = ""
authors = ["felipesilvaibi <felipe_ibirama@hotmail.com>"]
readme = "README.md"
packages = [{include = "monte_carlo_simulation"}]

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
